--- a/DoomFileManagerX/DoomFileManagerX.csproj
+++ b/DoomFileManagerX/DoomFileManagerX.csproj
@@ -14,5 +14,6 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="0.10.11" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.11" />
+    <PackageReference Include="Teast.Controls.GroupBox" Version="1.1.0" />
   </ItemGroup>
 </Project>
