--- a/DoomFileManagerX/DoomFileManagerX.csproj
+++ b/DoomFileManagerX/DoomFileManagerX.csproj
@@ -140,5 +140,8 @@
   <ItemGroup>
     <Resource Include="Assets\avalonia-logo.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\bullet_blue.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
