--- a/DoomFileManagerX/DoomFileManagerX.csproj
+++ b/DoomFileManagerX/DoomFileManagerX.csproj
@@ -71,10 +71,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Commands\RelayCommand.cs" />
+    <Compile Include="Converters\AddSpaceToSizeConverter.cs" />
     <Compile Include="Models\DetailsItems\DetailsItem.cs" />
     <Compile Include="Models\DetailsItems\IDetailsItem.cs" />
     <Compile Include="Utility\GetIcon.cs" />
     <Compile Include="Utility\GetIconUseDll.cs" />
+    <Compile Include="Utility\Operations.cs" />
     <Compile Include="Utility\SizeCalculation.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
